// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollapsibleComponentCardsTest render with buttonAriaLabel set to: some button label 1`] = `
<DocumentFragment>
  <div
    class="collapsibleContainer"
  >
    <mock-headingelementforlevel>
      <mock-customizedactionbutton
        aria-expanded="true"
        arialabel="some button label"
        classname="collapsibleControl"
        data-automation-id="collapsible-component-cards-button"
      >
        <span
          class="collapsibleTitle"
        >
          <mock-headingelementforlevel
            headinglevel="5"
          >
            Some header
          </mock-headingelementforlevel>
        </span>
      </mock-customizedactionbutton>
    </mock-headingelementforlevel>
    <div
      class="collapsibleContainerContent"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CollapsibleComponentCardsTest render with buttonAriaLabel set to: undefined 1`] = `
<DocumentFragment>
  <div
    class="collapsibleContainer"
  >
    <mock-headingelementforlevel>
      <mock-customizedactionbutton
        aria-expanded="true"
        classname="collapsibleControl"
        data-automation-id="collapsible-component-cards-button"
      >
        <span
          class="collapsibleTitle"
        >
          <mock-headingelementforlevel
            headinglevel="5"
          >
            Some header
          </mock-headingelementforlevel>
        </span>
      </mock-customizedactionbutton>
    </mock-headingelementforlevel>
    <div
      class="collapsibleContainerContent"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CollapsibleComponentCardsTest render with containerClassName set to: a-container 1`] = `
<DocumentFragment>
  <div
    class="a-container collapsibleContainer"
  >
    <mock-headingelementforlevel>
      <mock-customizedactionbutton
        aria-expanded="true"
        classname="collapsibleControl"
        data-automation-id="collapsible-component-cards-button"
      >
        <span
          class="collapsibleTitle"
        >
          <mock-headingelementforlevel
            headinglevel="5"
          >
            Some header
          </mock-headingelementforlevel>
        </span>
      </mock-customizedactionbutton>
    </mock-headingelementforlevel>
    <div
      class="collapsibleContainerContent"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CollapsibleComponentCardsTest render with containerClassName set to: undefined 1`] = `
<DocumentFragment>
  <div
    class="collapsibleContainer"
  >
    <mock-headingelementforlevel>
      <mock-customizedactionbutton
        aria-expanded="true"
        classname="collapsibleControl"
        data-automation-id="collapsible-component-cards-button"
      >
        <span
          class="collapsibleTitle"
        >
          <mock-headingelementforlevel
            headinglevel="5"
          >
            Some header
          </mock-headingelementforlevel>
        </span>
      </mock-customizedactionbutton>
    </mock-headingelementforlevel>
    <div
      class="collapsibleContainerContent"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CollapsibleComponentCardsTest render with contentClassName set to: content-class-name-a 1`] = `
<DocumentFragment>
  <div
    class="collapsibleContainer"
  >
    <mock-headingelementforlevel>
      <mock-customizedactionbutton
        aria-expanded="true"
        classname="collapsibleControl"
        data-automation-id="collapsible-component-cards-button"
      >
        <span
          class="collapsibleTitle"
        >
          <mock-headingelementforlevel
            headinglevel="5"
          >
            Some header
          </mock-headingelementforlevel>
        </span>
      </mock-customizedactionbutton>
    </mock-headingelementforlevel>
    <div
      class="content-class-name-a collapsibleContainerContent"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CollapsibleComponentCardsTest render with contentClassName set to: undefined 1`] = `
<DocumentFragment>
  <div
    class="collapsibleContainer"
  >
    <mock-headingelementforlevel>
      <mock-customizedactionbutton
        aria-expanded="true"
        classname="collapsibleControl"
        data-automation-id="collapsible-component-cards-button"
      >
        <span
          class="collapsibleTitle"
        >
          <mock-headingelementforlevel
            headinglevel="5"
          >
            Some header
          </mock-headingelementforlevel>
        </span>
      </mock-customizedactionbutton>
    </mock-headingelementforlevel>
    <div
      class="collapsibleContainerContent"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CollapsibleComponentCardsTest toggle from expanded to collapsed: collapsed 1`] = `
<DocumentFragment>
  <div
    class="collapsibleContainer"
  >
    <mock-headingelementforlevel>
      <button
        aria-expanded="true"
        class="ms-Button ms-Button--action ms-Button--command collapsibleControl root-109"
        data-automation-id="collapsible-component-cards-button"
        data-is-focusable="true"
        type="button"
      >
        <span
          class="ms-Button-flexContainer flexContainer-110"
          data-automationid="splitbuttonprimary"
        >
          <span
            class="collapsibleTitle"
          >
            <mock-headingelementforlevel
              headinglevel="5"
            >
              Some header
            </mock-headingelementforlevel>
          </span>
        </span>
      </button>
    </mock-headingelementforlevel>
    <div
      class="collapsibleContainerContent"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CollapsibleComponentCardsTest toggle from expanded to collapsed: expanded 1`] = `
<DocumentFragment>
  <div
    class="collapsibleContainer"
  >
    <mock-headingelementforlevel>
      <button
        aria-expanded="true"
        class="ms-Button ms-Button--action ms-Button--command collapsibleControl root-109"
        data-automation-id="collapsible-component-cards-button"
        data-is-focusable="true"
        type="button"
      >
        <span
          class="ms-Button-flexContainer flexContainer-110"
          data-automationid="splitbuttonprimary"
        >
          <span
            class="collapsibleTitle"
          >
            <mock-headingelementforlevel
              headinglevel="5"
            >
              Some header
            </mock-headingelementforlevel>
          </span>
        </span>
      </button>
    </mock-headingelementforlevel>
    <div
      class="collapsibleContainerContent"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
</DocumentFragment>
`;
